# university

./: .gitignore  readme.md
ADS/lab1/: lab1_1.cpp  lab1_2.cpp
ADS/lab2/: lab2_1.cpp  lab2_2.cpp  lab2_3.cpp  lab2_4.cpp  lab2_5.cpp
ADS/lab3/: lab3_1.cpp  lab3_2.cpp  lab3_3.cpp
ADS/lab4/: lab4_1.cpp  lab4_2.cpp
ADS/lab5/: lab5_1.cpp  lab5_2.cpp  lab5_3.cpp  lab5_4.cpp
ADS/lab6/: coniolinux.cpp  lab6_1.cpp  lab6_2.cpp  lab6_3.cpp
ADS/lab7/: graph.txt  lab7_1.cpp
ADS/lab8/: graph.txt  graph2.txt  lab8_1.cpp  lab8_2.cpp
AIC/course/: aic.sln
AIC/slidev/: package.json  slides.md
Databases/course/: 01_create_db.sql  02_create_tables.sql  03_create_users.sql  04_create_triggers.sql  05_create_procedures.sql  06_create_views.sql
Databases/course-app/: App.xaml  App.xaml.cs  InsuranceCompany.csproj  InsuranceCompany.sln  MainWindow.xaml  MainWindow.xaml.cs
Databases/lab4/: create_database.sql  create_tables.sql
Databases/lab6/: row_update.sql
Discrete structures/hw1/: hw1.m  readme.md
Discrete structures/lab1/: lab1.m  readme.md
Discrete structures/lab2/: lab2.m  readme.md
Information security/lab1/: readme.md
Information security/lab2/: readme.md
Math methods/lab1/: lab1.cpp
Math methods/lab2/: lab2_naive_program.cpp  lab2_optimized_program.cpp
Math methods/lab3/: lab3.sm  lab3_naive_program.cpp  lab3_optimized_program.cpp  numbers_optimized_result.txt
Math methods/lab5/: lab4_1.cpp
Math methods/lab7/: graph2.txt  lab7_1.cpp
Math modeling/lab1/: readme.md
Math modeling/lab2/: readme.md
Math modeling/lab3/: readme.md
Math modeling/lab4/: package-lock.json  readme.md
Math modeling/lab5/: readme.md
Math modeling/lab5.1/: package.json  readme.md
Math modeling/lab5.2/: readme.md
Math modeling/lab6/: package-lock.json  package.json  readme.md
Math modeling/lab7/: readme.md
MathMethods/lab1/: lab1.sm
MathMethods/lab3/: numbers_naive_result.txt
MathMethods/lab5/: lab4_2.cpp
MathMethods/lab6/: lab6.sm
MathMethods/lab7/: lab7_4.cpp
Mobile development/app/: build.gradle.kts
Mobile development/exam/: settings.gradle.kts
OOP/4 semester/lab1/: CMakeLists.txt  readme.md
OOP/4 semester/lab1/include/: authorization.h  ui.h
OOP/4 semester/lab1/include/factories/: userfactory.h
OOP/4 semester/lab1/include/stores/: userstore.h
OOP/4 semester/lab1/include/users/: account.h  actions.h  user.h  useradmin.h  usermoderator.h
OOP/4 semester/lab1/src/: Authorization.cpp  Authorization.h  UI.cpp  UI.h  UserFactory.cpp  UserFactory.h  UserStore.cpp  UserStore.h  authorization.cpp  main.cpp  ui.cpp
OOP/4 semester/lab1/src/factories/: userfactory.cpp
OOP/4 semester/lab1/src/stores/: userstore.cpp
OOP/4 semester/lab1/src/users/: User.cpp  User.h  UserAdmin.cpp  UserAdmin.h  UserModerator.cpp  UserModerator.h  account.cpp  actions.cpp  user.cpp  useradmin.cpp  usermoderator.cpp
Project workshop/: University.sln
Software design/cw1/: .gitignore  CMakeLists.txt  readme.md
Software design/cw1/data/: task2.txt  task5_dist.txt
Software design/lab1/: CMakeLists.txt  main.cpp  readme.md
Software design/lab2/: CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
(+681 files in other folders)
